# csa

./: .gitignore  readme.txt  run_all_partitions.py  step1_csa_exportBoundaries.sh  step2_csa_Slice_Left_Right.sh  step3_diameterCal_Left_Right.sh
python_slicer/: IMPLEMENTATION_COMPLETE.md  INPUT_FILES_EXPLAINED.md  QUICKSTART.md  README.md  TEST_DATA_SUMMARY.md  analyze_airway_dynamics.py  analyze_airway_dynamics_advanced.py  analyze_centerline_motion.py  aortic_branch_detector.py  branch_detector.py  check_plane_overlaps.py  check_plane_overlaps_correct.py  create_plane_motion_video.py  create_plane_reference_figure.py  create_plane_reference_interactive_plotly.py  create_plane_reference_pyvista_interactive.py  create_plane_reference_trimesh.py  create_plane_video_fast.py  create_plane_video_labeled.py  create_planes.py.new  detect_incomplete_planes_optimized.py  detect_open_planes.py  diagnose_plane_intersections.py  environment.yml  interpolate_frames.py  main.py  main_consistent.py  main_old.py.backup  pipeline_aortic.py  pipeline_bifurcation.py  pipeline_full.py  plot_csa_by_index.py  plot_csa_cycle.py  postprocess_aortic.py  postprocess_bifurcation.py  prepare_subject.sh  pyproject.toml  requirements.txt  setup.sh  setup_conda.sh  (+7 more)
python_slicer/archive/: analyze_contour_geometry.py  analyze_edge_planes_all_timepoints.py  analyze_frame14_boundaries.py  debug_boundary_edges.py  diagnose_centerline_position.py
python_slicer/slicer/: __init__.py  boundary_caps.py  geometry.py  io_utils.py  loop_filter.py  measurements.py  mesh_intersection.py  mesh_intersection.py.backup  plane_slicer.py  (+2 more)
(+45 files in other folders)
